// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideBar Project render flows sidebar with root 1`] = `
<Fragment>
  <div
    className="search-section"
  >
    <label
      className="section-title mt-3"
    >
      All Flows
    </label>
    <Input
      className="form-control-border mb-3 search-input"
      name="filter"
      onChange={[Function]}
      placeholder="Search Flows"
      type="text"
      value=""
    />
  </div>
  <div
    className="flows-list"
  >
    <Connect(FlowButton)
      copyFlow={[Function]}
      deleteFlow={[Function]}
      flow={
        Object {
          "id": "1",
          "name": "ROOT",
          "sub_diagrams": Array [],
        }
      }
      key="1"
    />
  </div>
</Fragment>
`;

exports[`SideBar Project render flows with sub diagrams 1`] = `
<Fragment>
  <div
    className="search-section"
  >
    <label
      className="section-title mt-3"
    >
      All Flows
    </label>
    <Input
      className="form-control-border mb-3 search-input"
      name="filter"
      onChange={[Function]}
      placeholder="Search Flows"
      type="text"
      value=""
    />
  </div>
  <div
    className="flows-list"
  >
    <Connect(FlowButton)
      copyFlow={[Function]}
      deleteFlow={[Function]}
      flow={
        Object {
          "id": "1",
          "name": "ROOT",
          "sub_diagrams": Array [
            "2",
          ],
        }
      }
      key="1"
    />
    <Connect(FlowButton)
      copyFlow={[Function]}
      deleteFlow={[Function]}
      flow={
        Object {
          "id": "2",
          "name": "TEST",
          "sub_diagrams": Array [],
        }
      }
      key="2"
    />
  </div>
</Fragment>
`;
